# AI-Soccer-Vision

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
camara_movement_estimater/: __init__.py  camara_movement_estimater.py
development_and_analsis/: color_assignment.ipynb
models/: best.pt  last.pt
player_ball_assigner/: player_ball_assigner.py
runs/detect/predict/: 08fd33_4.avi
runs/detect/predict3/: 08fd33_4.avi
speed_and_distance_estimator/: speed_and_distance_estimator.py
team_assigner/: team_assigner.py
trackers/: tracker.py
training/: football_training_yolo_v5.ipynb
utils/: __init__.py  bbox_utils.py  video_utils.py
view_transformer/: view_transformer.py
